# tes

./: .editorconfig  CMakeLists.txt  TCP_Server.cpp
src/: app.h  main.cpp  mjpeg_server.cpp  mjpeg_server.h  tess.cpp
src/tcp/: TCPServer.cpp  TCPServer.h
